third_party/move/move-compiler-v2/tests/more-v1/expansion/spec_block_in_spec_context.exp

Diagnostics:
error: syntax item restricted to spec contexts
  ┌─ tests/more-v1/expansion/spec_block_in_spec_context.move:5:13
  │
5 │             spec {};
  │             ^^^^^^^ 'spec' blocks cannot be used inside of a spec context
